# LearnFFmpeg

./: CMakeLists.txt  README.md  main.cpp
librarys/ffmpeg/: libavdevice.58.dylib  libpostproc.55.dylib
src/chapter_05/: avformatuse.h
src/chapter_06/: sdl_video.h
src/chapter_07/: sdl_audio.h
src/chapter_08/: AVPacketMemoryModel.cpp  AVPacketMemoryModel.h
src/chapter_09/: AVRender.cpp  AVRender.h  AudioThread.cpp  AudioThread.h  VideoThread.cpp  VideoThread.h
